--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,4 +1,4 @@
-<com.example.anastasiyaverenich.vkrecipes.modules.HackyViewPager
+<com.example.anastasiyaverenich.vkrecipes.ui.HackyViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_pager"
     android:layout_width="fill_parent"
