--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -15,50 +15,55 @@
             android:layout_height="wrap_content"
             android:padding="16dp">
             <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="fill_parent"
+                android:id="@+id/rli_tv_name_list"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="16dp"/>
             <LinearLayout
                 android:id="@+id/rli_ll_images_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewName"
+                android:layout_below="@+id/rli_tv_name_list"
                 android:orientation="vertical"></LinearLayout>
             <TextView
-                android:id="@+id/textViewDescription"
-                android:layout_width="fill_parent"
+                android:id="@+id/rli_tv_description_list"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rli_ll_images_container" />
             <View
-                android:layout_marginTop="3dp"
-                android:layout_width="fill_parent"
-                android:layout_height="4dp"
-                android:layout_below="@+id/textViewDescription"
+                android:id="@+id/rli_v_separator"
+                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="1px"
+                android:layout_below="@+id/rli_tv_description_list"
                 android:background="@android:color/darker_gray"/>
-            <ImageView
-                android:id="@+id/rli_iv_panel_icon2"
-                android:layout_width="fill_parent"
+            <ImageButton
+                android:id="@+id/rli_iv_panel_save_images"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewDescription"
+                android:layout_below="@+id/rli_v_separator"
                 android:layout_marginTop="9dp"
-                android:src="@drawable/ic_save_black_24dp" />
-            <ImageView
-                android:id="@+id/rli_iv_panel_icon1"
-                android:layout_width="fill_parent"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/ic_save_black_24dp"
+                android:background="?attr/selectableItemBackground" />
+            <ImageButton
+                android:id="@+id/rli_iv_panel_favourite_list"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewDescription"
+                android:layout_below="@+id/rli_v_separator"
                 android:layout_marginTop="9dp"
-                android:layout_marginRight="-210dp"
-                android:src="@drawable/ic_favorite_black_24dp" />
-            <ImageView
-                android:id="@+id/rli_iv_panel_icon3"
-                android:layout_width="fill_parent"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/ic_star_border_black_24dp"
+                android:background="?attr/selectableItemBackground"/>
+            <ImageButton
+                android:id="@+id/rli_iv_panel_share_list"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
-                android:layout_marginLeft="-210dp"
-                android:layout_below="@+id/textViewDescription"
-                android:src="@drawable/ic_share_black_24dp"/>
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/rli_v_separator"
+                android:src="@mipmap/ic_share_black_24dp"
+                android:background="?attr/selectableItemBackground"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
