--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,9 @@
         <item name="colorPrimary">@color/primary</item> 
         <item name="colorPrimaryDark">@color/primary_dark</item> 
         <item name="colorControlHighlight">@color/accent_translucent</item> 
-        <item name="colorAccent">@color/accent</item>
-        <item name="selectableItemBackground">@drawable/selectable_item_background</item>
-        <item name="android:selectableItemBackground">@drawable/selectable_item_background</item>
+        <!--<item name="colorAccent">@color/accent</item>-->
+        <!--<item name="selectableItemBackground">@drawable/selectable_item_background</item>-->
+        <!--<item name="android:selectableItemBackground">@drawable/selectable_item_background</item>-->
     </style>
         <color name="primary">#00BCD4</color>
         <color name="primary_dark">#0097A7</color>
