--- a/app/src/main/res/layout/progress_bar_for_image.xml
+++ b/app/src/main/res/layout/progress_bar_for_image.xml
@@ -2,11 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <uk.co.senab.photoview.PhotoView
+        android:id="@+id/iv_photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></uk.co.senab.photoview.PhotoView>
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_gravity="center"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
-
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 </FrameLayout>
