--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cv"
         android:layout_width="match_parent"
@@ -37,33 +36,53 @@
                 android:layout_height="1px"
                 android:layout_below="@+id/rli_tv_description_list"
                 android:background="@android:color/darker_gray"/>
-            <ImageButton
-                android:id="@+id/rli_iv_panel_save_images"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/rli_v_separator"
-                android:layout_marginTop="9dp"
+            <FrameLayout
+                android:id="@+id/rli_fl_panel_save_images"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
-                android:src="@mipmap/ic_save_black_24dp"
-                android:background="?attr/selectableItemBackground" />
-            <ImageButton
-                android:id="@+id/rli_iv_panel_favourite_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/rli_v_separator"
-                android:layout_marginTop="9dp"
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground"
+                android:layout_below="@+id/rli_v_separator">
+                <ImageView
+                    android:id="@+id/rli_iv_panel_save_images"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="9dp"
+                    android:src="@drawable/ic_save_black_24dp" />
+            </FrameLayout>
+            <FrameLayout
+                android:id="@+id/rli_fl_panel_favourite_list"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_centerHorizontal="true"
-                android:src="@mipmap/ic_star_border_black_24dp"
-                android:background="?attr/selectableItemBackground"/>
-            <ImageButton
-                android:id="@+id/rli_iv_panel_share_list"
-                android:layout_width="wrap_content"
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground"
+                android:layout_below="@+id/rli_v_separator">
+            <ImageView
+                android:id="@+id/rli_iv_panel_favourite_list"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
+                android:src="@drawable/ic_star_border_black_24dp" />
+            </FrameLayout>
+            <FrameLayout
+                android:id="@+id/rli_fl_panel_share_list"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/rli_v_separator"
-                android:src="@mipmap/ic_share_black_24dp"
-                android:background="?attr/selectableItemBackground"/>
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground">
+            <ImageView
+                android:layout_gravity="left"
+                android:id="@+id/rli_iv_panel_share_list"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
+                android:src="@drawable/ic_share_black_24dp" />
+            </FrameLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
