--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -6,13 +6,16 @@
 
         <item
             android:id="@+id/drawer_home"
-            android:checked="true"
-            android:icon="@mipmap/ic_home_black_24dp"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/ic_home_black_24dp"
             android:title="Домашняя страница" />
 
         <item
             android:id="@+id/drawer_favourite"
-            android:icon="@mipmap/ic_star_border_black_24dp"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/ic_star_border_black_24dp"
             android:title="Закладки"/>
 
     </group>
