--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,5 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ListView
         android:id="@+id/lvMain"
@@ -7,5 +9,4 @@
         android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="0dp"></ListView>
-</LinearLayout>
-    <!--&lt;!&ndash;tools:context="com.example.anastasiyaverenich.vkrecipes.fragments.FeedFragment">-->
+</android.support.v4.widget.SwipeRefreshLayout>
