--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,4 +4,7 @@
     <color name="list_background_pressed">#ccc</color>
     <color name="drawer_item_color">#fff</color>
     <color name="list_divider">#5e5e5e</color>
+    <color name="light_blue">#AFEEEE</color>
+    <color name="middle_blue">#6495ED</color>
+    <color name="deep_blue">#0000FF</color>
 </resources>
