--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -18,12 +18,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"/>
-            <LinearLayout
+            <org.apmem.tools.layouts.FlowLayout
                 android:id="@+id/rli_ll_images_container"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rli_tv_name_list"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="horizontal"
+                android:gravity="fill"
+                >
+            </org.apmem.tools.layouts.FlowLayout>
             <TextView
                 android:id="@+id/rli_tv_description_list"
                 android:layout_width="wrap_content"
