--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -5,18 +5,41 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/drawer_home"
+            android:id="@+id/drawer_cook_good"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="Домашняя страница" />
-
+            android:icon="@drawable/hotdrink24"
+            android:title="@string/cook_good" />
+        <item
+            android:id="@+id/drawer_fitness_recipe"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/chef15"
+            android:title="@string/fitness_recipe" />
+        <item
+            android:id="@+id/drawer_health_food"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/heart177"
+            android:title="@string/health_food" />
+        <item
+            android:id="@+id/drawer_best_recipe"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/tray29"
+            android:title="@string/best_recipe" />
+        <item
+            android:id="@+id/drawer_useful_recipe"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/restaurant23"
+            android:title="@string/useful_recipe" />
         <item
             android:id="@+id/drawer_favourite"
             android:state_focused="true"
             android:state_pressed="false"
             android:icon="@drawable/ic_star_border_black_24dp"
-            android:title="Закладки"/>
+            android:title="@string/bookmark"/>
 
     </group>
 </menu>
