Add and delete category

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -35,11 +35,16 @@
             android:icon="@drawable/restaurant23"
             android:title="@string/useful_recipe" />
         <item
+            android:id="@+id/drawer_instagram_recipes"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:icon="@drawable/restaurant23"
+            android:title="@string/useful_recipe" />
+        <item
             android:id="@+id/drawer_bookmark"
             android:state_focused="true"
             android:state_pressed="false"
             android:icon="@drawable/ic_star_border_black_24dp"
             android:title="@string/bookmark"/>
-
     </group>
 </menu>
