--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,4 +7,5 @@
     <color name="light_blue">#AFEEEE</color>
     <color name="middle_blue">#6495ED</color>1
     <color name="deep_blue">#0000FF</color>
+    <color name="fun_blue">#0097A7</color>
 </resources>
