--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
     <com.example.anastasiyaverenich.vkrecipes.ui.HackyViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/view_pager"
         android:layout_width="fill_parent"
@@ -11,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:orientation="horizontal"
-        android:layout_alignParentTop="true"
         android:clickable="true"
-        android:background="#88000000" >
+        android:background="#88000000">
         <ImageButton
             android:id="@+id/back_button"
             android:layout_width="30dp"
@@ -27,6 +27,8 @@
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_toEndOf="@+id/back_button"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
             android:textColor="#ffffff"
             android:textSize="20sp"/>
         <ImageButton
