--- a/app/src/main/res/layout/name_of_bookmark_list_item.xml
+++ b/app/src/main/res/layout/name_of_bookmark_list_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daimajia.swipe.SwipeLayout
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:swipe="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     swipe:leftEdgeSwipeOffset="0dp"
     swipe:rightEdgeSwipeOffset="0dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -26,31 +26,42 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="Delete Item?"
+            android:text="Удалить категорию?"
             android:textColor="#fff"
             android:textSize="17sp" />
 
         <Button
             android:id="@+id/delete"
-            android:layout_width="0dp"
+            android:layout_width="30dp"
             android:layout_height="40dp"
-            android:layout_weight="4"
+            android:layout_weight="2"
             android:background="@drawable/white"
-            android:text="Yes,Delete"
+            android:text="Да,удалить"
+            android:textColor="#FF5534" />
+
+        <Button
+            android:id="@+id/edit"
+            android:layout_width="-20dp"
+            android:layout_height="40dp"
+            android:layout_weight="2"
+            android:background="@drawable/white"
+            android:text="Редактировать"
             android:textColor="#FF5534" />
     </LinearLayout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/ll_tv_name_of_bookmark_list"
-        android:layout_margin="20dp"
-        android:layout_width="wrap_content"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        tools:text="text"/>
-</LinearLayout>
-    </com.daimajia.swipe.SwipeLayout>
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/ll_tv_name_of_bookmark_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:textSize="20sp"
+            tools:text="text" />
+    </LinearLayout>
+</com.daimajia.swipe.SwipeLayout>
