--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -3,5 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_edit" android:title="edit"
         android:icon="@drawable/ic_mode_edit_black_48dp"
+        android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
         android:orderInCategory="100" app:showAsAction="always" />
 </menu>
