--- a/app/src/main/res/layout/name_of_bookmark_list_item.xml
+++ b/app/src/main/res/layout/name_of_bookmark_list_item.xml
@@ -1,67 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:swipe="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipe"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    swipe:leftEdgeSwipeOffset="0dp"
-    swipe:rightEdgeSwipeOffset="0dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#FF5534"
-        android:gravity="center"
-        android:tag="Bottom3"
-        android:weightSum="10">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:tag="Bottom2">
+
+        <ImageView
+            android:id="@+id/star"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:background="#4cd964"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:src="@drawable/ic_mode_edit_black_48dp" />
 
         <ImageView
             android:id="@+id/trash"
-            android:layout_width="27dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
+            android:layout_width="65dp"
+            android:layout_height="match_parent"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
             android:src="@drawable/trash" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:text="Удалить категорию?"
-            android:textColor="#fff"
-            android:textSize="17sp" />
-
-        <Button
-            android:id="@+id/delete"
-            android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:layout_weight="2"
-            android:background="@drawable/white"
-            android:text="Да,удалить"
-            android:textColor="#FF5534" />
-
-        <Button
-            android:id="@+id/edit"
-            android:layout_width="-20dp"
-            android:layout_height="40dp"
-            android:layout_weight="2"
-            android:background="@drawable/white"
-            android:text="Редактировать"
-            android:textColor="#FF5534" />
     </LinearLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/nobli_ll_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_vertical">
         <TextView
-            android:id="@+id/ll_tv_name_of_bookmark_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:textSize="20sp"
-            tools:text="text" />
+            android:id="@+id/ll_tv_name_of_bookmark_list"
+            tools:text="text"
+            android:textSize="20sp" />
     </LinearLayout>
 </com.daimajia.swipe.SwipeLayout>
