--- a/app/src/main/res/layout/swipe_listview.xml
+++ b/app/src/main/res/layout/swipe_listview.xml
@@ -17,7 +17,7 @@
         android:weightSum="10">
 
         <ImageView
-            android:id="@+id/trash"
+            android:id="@+id/tr"
             android:layout_width="27dp"
             android:layout_height="30dp"
             android:layout_weight="1"
