--- a/app/src/main/res/layout/bookmark_menu.xml
+++ b/app/src/main/res/layout/bookmark_menu.xml
@@ -7,12 +7,19 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/ll_tv_name_of_bookmark_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_height="65dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="27dp"
         android:textSize="20sp"
         tools:text="text" />
+    <View
+        android:id="@+id/rli_v_separator_up"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
+        android:background="@android:color/darker_gray" />
 </LinearLayout>
