did button edit and updating new bookmark on listview

--- a/app/src/main/res/layout/fragment_edit_name_of_bookmark.xml
+++ b/app/src/main/res/layout/fragment_edit_name_of_bookmark.xml
@@ -4,12 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <EditText
-        android:id="@+id/fab_add_new_bookmark"
+        android:id="@+id/feb_edit_bookmark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="22dp"
         android:layout_marginRight="22dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/name_new_bookmark" />
+        android:layout_marginBottom="4dp"/>
+<!--        android:hint="@string/name_edit_bookmark"-->
 </LinearLayout>
