--- a/app/src/main/res/menu/menu_find_in_db.xml
+++ b/app/src/main/res/menu/menu_find_in_db.xml
@@ -2,10 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_edit"
+        android:id="@+id/action_search"
         android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
-        android:icon="@drawable/ic_mode_edit_black_48dp"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="100"
-        android:title="edit"
-        app:showAsAction="always" />
+        android:title="@string/name_edit_bookmark"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
+
