--- a/app/src/main/res/menu/menu_find_in_db.xml
+++ b/app/src/main/res/menu/menu_find_in_db.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_search"
         android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
-        app:showAsAction="collapseActionView|ifRoom"
+        app:showAsAction="ifRoom|collapseActionView"
         android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="100"
         android:title="@string/name_edit_bookmark"
