--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -8,4 +8,5 @@
     <color name="middle_blue">#6495ED</color>1
     <color name="deep_blue">#0000FF</color>
     <color name="fun_blue">#0097A7</color>
+    <color name="color_image">#8b1114</color>
 </resources>
