--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
-    <com.example.anastasiyaverenich.vkrecipes.ui.HackyViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content">
+    <FrameLayout
+        android:id="@+id/activity_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true">
+    <com.example.anastasiyaverenich.vkrecipes.ui.HackyViewPager
         android:id="@+id/view_pager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:onClick="onClick" />
     <RelativeLayout
+        android:id="@+id/image_action_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:orientation="horizontal"
-        android:clickable="true"
-        android:background="#88000000">
+        android:orientation="horizontal">
+    <!--    android:clickable="true"
+        android:windowActionBarOverlay="true"-->
         <ImageButton
             android:id="@+id/back_button"
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackground"
             android:layout_alignParentLeft="true"
-            android:tint="#ffffff"
             android:src="@drawable/ic_arrow_back_black_24dp" />
         <TextView
             android:id="@+id/count_images"
@@ -37,7 +42,8 @@
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackground"
             android:layout_alignParentRight="true"
-            android:tint="#ffffff"
+            android:tint="@color/drawer_item_color"
             android:src="@drawable/ic_more_vert_black_24dp"/>
     </RelativeLayout>
 </FrameLayout>
+</LinearLayout>
