--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,6 @@
 
     <style name="AppTheme" parent="BaseTheme"/>
     <style name="MyTitleTextStyle">
-        <item name="android:textColor">@color/primary</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
     </style>
     <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -13,6 +12,7 @@
         <item name="colorPrimary">@color/primary</item> 
         <item name="colorPrimaryDark">@color/primary_dark</item> 
         <item name="colorControlHighlight">@color/accent_translucent</item> 
+        <item name="android:titleTextStyle">@color/drawer_item_color</item> 
         <item name="colorAccent">@color/accent</item>
 
         <!--<item name="selectableItemBackground">@drawable/selectable_item_background</item>-->
@@ -20,9 +20,10 @@
     </style>
 
 
-    <color name="primary">#00BCD4</color>
+    <color name="primary">#8b1114</color>
+    <color name="text">#b6ff7c3b</color>
     <color name="primary_dark">#0097A7</color>
-    <color name="accent">#b6ff7c3b</color>
-    <color name="accent_translucent">#b6ff7c3b</color>
-    <color name="accent_bright">#b6ff7c3b</color>
+    <color name="accent">#f6ebec</color>
+    <color name="accent_translucent">#fff</color>
+    <color name="accent_bright">#f6ebec</color>
 </resources>
