--- a/app/src/main/res/layout/name_of_bookmark_list_item.xml
+++ b/app/src/main/res/layout/name_of_bookmark_list_item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:tag="Bottom2">
+        android:tag="Top">
 
         <ImageView
             android:id="@+id/nobli_ll_edit"
