--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,15 +1,16 @@
-
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-<com.github.ksoichiro.android.observablescrollview.ObservableListView
-        android:id="@+id/lvMain"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:divider="@null"
-        android:dividerHeight="0dp"/>
-
+        android:dividerHeight="0dp"
+        android:scrollbars="vertical" />
 </android.support.v4.widget.SwipeRefreshLayout>
+
+
+
 
