--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,46 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group
-        android:checkableBehavior="single">
+    <group android:checkableBehavior="single">
 
         <item
-
             android:id="@+id/drawer_cook_good"
+            android:icon="@drawable/hotdrink24"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/hotdrink24"
             android:title="@string/cook_good" />
         <item
             android:id="@+id/drawer_fitness_recipe"
+            android:icon="@drawable/chef15"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/chef15"
             android:title="@string/fitness_recipe" />
         <item
             android:id="@+id/drawer_health_food"
+            android:icon="@drawable/heart177"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/heart177"
             android:title="@string/health_food" />
         <item
             android:id="@+id/drawer_best_recipe"
+            android:icon="@drawable/tray29"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/tray29"
             android:title="@string/best_recipe" />
         <item
             android:id="@+id/drawer_useful_recipe"
+            android:icon="@drawable/restaurant23"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/restaurant23"
             android:title="@string/useful_recipe" />
         <item
             android:id="@+id/drawer_bookmark"
+            android:icon="@drawable/ic_star_border_black_24dp"
             android:state_focused="true"
             android:state_pressed="false"
-            android:icon="@drawable/ic_star_border_black_24dp"
-            android:title="@string/bookmark"/>
+            android:title="@string/bookmark" />
     </group>
 
 
