--- a/app/src/main/res/layout/fragment_bookmark_details.xml
+++ b/app/src/main/res/layout/fragment_bookmark_details.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_bookmark"
+    <android.support.v7.widget.RecyclerView        android:id="@+id/lvBookmark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="#FFFFFF"/>
