--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
-    <color name="primary">#8b1114</color>
+    <color name="primary">#e00106</color>
     <color name="text">#b6ff7c3b</color>
     <color name="primary_dark">#0097A7</color>
     <color name="accent">#f6ebec</color>
