--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,10 +3,19 @@
     <color name="list_background">#000</color>
     <color name="list_background_pressed">#ccc</color>
     <color name="drawer_item_color">#fff</color>
+    <color name="text_color">#000</color>
     <color name="list_divider">#5e5e5e</color>
-    <color name="light_blue">#AFEEEE</color>
-    <color name="middle_blue">#6495ED</color>1
-    <color name="deep_blue">#0000FF</color>
-    <color name="fun_blue">#0097A7</color>
-    <color name="color_image">#8b1114</color>
+    <color name="light_blue">#e00106</color>
+    <color name="middle_blue">#b90509</color>
+    <color name="deep_blue">#8b1114</color>
+    <color name="fun_blue">#e00106</color>
+    <color name="color_image">#e00106</color>
+    <color name="background_bookmark_swipe">#e00106</color>
+
+    <color name="primary">#e00106</color>
+    <color name="text">#e00106</color>
+    <color name="accent">#e00106</color>
+    <color name="accent_translucent">#ffffff</color>
+    <color name="accent_bright">#f6ebec</color>
+    <color name="popup_menu_background">#000000</color>
 </resources>
